# cmake-export-binary-example

./: .gitignore  Makefile  README.md
project-a/: CMakeLists.txt
project-a/src/: hellomoon.cpp
project-b/: CMakeLists.txt
subproject-a/: CMakeLists.txt
subproject-a/src/: hellojupiter.cpp  hellomoon.cpp
subproject-b/: CMakeLists.txt
subproject-c/: CMakeLists.txt
superproject/: CMakeLists.txt
